--- a/cart.html
+++ b/cart.html
@@ -169,7 +169,8 @@
   </div>  <div class="footer" id="customerService">
     خدمة العملاء:<br>
     <a href="mailto:jojoshopsuppor@gmail.com">jojoshopsuppor@gmail.com</a><br>
-    واتساب: <a href="https://wa.me/201080554138">201080554138</a>
+    واتساب: <a href="https://wa.me/201150877664">201150877664
+    </a>
   </div>  <script>
     function getLocation() {
       if (navigator.geolocation) {
