--- a/clothes.html
+++ b/clothes.html
@@ -44,18 +44,21 @@
     }
 
     .product {
+      position: relative;
       background-color: white;
       padding: 10px;
       border-radius: 10px;
       text-align: center;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      overflow: hidden;
     }
 
     .product img {
       width: 100%;
       height: 250px;
-      object-fit: cover;
+      object-fit: contain; /* لعرض الصورة كاملة بتناسق */
       border-radius: 8px;
+      background-color: #f9f9f9;
     }
 
     .product h3 {
@@ -81,66 +84,109 @@
     .product button:hover {
       background-color: #ddb347;
     }
+
+    .sold-overlay {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: rgba(0,0,0,0.7);
+      color: white;
+      padding: 5px 10px;
+      border-radius: 5px;
+      font-size: 14px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
 
   <header>
     <h1>قسم الملابس 👗🛍️</h1>
-    <button class="cart-button" onclick="window.location.href='cart.html'">🛒 عربة التسوق</button>
+    <button class="cart-button" onclick="location.href='cart.html'">🛒 عربة التسوق</button>
   </header>
 
+  <script>
+    // أرقام المنتجات التي نفذت (1-based)
+    const soldOutProducts = [,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18];
+  </script>
+
   <section class="product-grid" id="product-grid">
-    <!-- المنتجات هتتحط هنا -->
+    <!-- المنتجات تظهر هنا -->
   </section>
 
   <script>
-    const products = [
-      "IMG-20250718-WA0003.jpg",
-      "IMG-20250718-WA0004.jpg",
-      "IMG-20250718-WA0005.jpg",
-      "IMG-20250718-WA0006.jpg",
-      "IMG-20250718-WA0007.jpg",
-      "IMG-20250718-WA0008.jpg",
-      "IMG-20250718-WA0009.jpg",
-      "IMG-20250718-WA0010.jpg",
-      "IMG-20250718-WA0011.jpg",
-      "IMG-20250718-WA0012.jpg",
-      "IMG-20250718-WA0013.jpg",
-      "IMG-20250718-WA0014.jpg",
-      "IMG-20250718-WA0015.jpg",
-      "IMG-20250718-WA0016.jpg",
-      "IMG-20250718-WA0017.jpg",
-      "IMG-20250718-WA0018.jpg",
-      "IMG-20250718-WA0019.jpg",
-      "IMG-20250718-WA0020.jpg"
-    ];
+    document.addEventListener('DOMContentLoaded', () => {
+      window.products = [
+        "IMG-20250718-WA0003.jpg",
+        "IMG-20250718-WA0004.jpg",
+        "IMG-20250718-WA0005.jpg",
+        "IMG-20250718-WA0006.jpg",
+        "IMG-20250718-WA0007.jpg",
+        "IMG-20250718-WA0008.jpg",
+        "IMG-20250718-WA0009.jpg",
+        "IMG-20250718-WA0010.jpg",
+        "IMG-20250718-WA0011.jpg",
+        "IMG-20250718-WA0012.jpg",
+        "IMG-20250718-WA0013.jpg",
+        "IMG-20250718-WA0014.jpg",
+        "IMG-20250718-WA0015.jpg",
+        "IMG-20250718-WA0016.jpg",
+        "IMG-20250718-WA0017.jpg",
+        "IMG-20250718-WA0018.jpg",
+        "IMG-20250718-WA0019.jpg",
+        "IMG-20250718-WA0020.jpg"
+      ];
 
-    const grid = document.getElementById("product-grid");
+      const grid = document.getElementById("product-grid");
 
-    products.forEach((img, index) => {
-      const product = document.createElement("div");
-      product.className = "product";
+      products.forEach((img, index) => {
+        const productNumber = index + 1;
+        const product = document.createElement("div");
+        product.className = "product";
 
-      product.innerHTML = `
-        <img src="${img}" alt="منتج ${index + 1}">
-        <h3>منتج ${index + 1}</h3>
-        <p>${100 + index * 10} جنيه</p>
-        <button onclick="addToCart(${index})">أضف إلى العربة</button>
-      `;
+        let soldBadge = '';
+        if (soldOutProducts.includes(productNumber)) {
+          soldBadge = '<div class="sold-overlay">نفذت الكمية</div>';
+        }
 
-      grid.appendChild(product);
+        product.innerHTML = `
+          ${soldBadge}
+          <img src="${img}" alt="منتج ${productNumber}">
+          <h3>منتج ${productNumber}</h3>
+          <p>${100 + index * 10} جنيه</p>
+          <button data-index="${index}">أضف إلى العربة</button>
+        `;
+
+        product.querySelector('button').addEventListener('click', (e) => {
+          const idx = parseInt(e.target.getAttribute('data-index'));
+          addToCart(idx);
+        });
+
+        grid.appendChild(product);
+      });
     });
 
     function addToCart(index) {
-      const cart = JSON.parse(localStorage.getItem("cart") || "[]");
-      cart.push({
-        name: `منتج ${index + 1}`,
-        price: 100 + index * 10,
-        image: products[index]
-      });
-      localStorage.setItem("cart", JSON.stringify(cart));
-      alert("تمت إضافة المنتج إلى العربة ✅");
+      try {
+        const cart = JSON.parse(localStorage.getItem("cart") || "[]");
+        const item = {
+          name: `منتج ${index + 1}`,
+          price: 100 + index * 10,
+          image: products[index]
+        };
+
+        if (soldOutProducts.includes( index +1)) {
+          alert("عذرًا، هذا المنتج نفذت كميته.");
+          return;
+        }
+
+        cart.push(item);
+        localStorage.setItem("cart", JSON.stringify(cart));
+        alert("تمت إضافة المنتج إلى العربة ✅");
+      } catch (err) {
+        console.error("خطأ أثناء إضافة المنتج:", err);
+        alert("حدث خطأ أثناء إضافة المنتج للعربة.");
+      }
     }
   </script>
 
