--- a/cart.html
+++ b/cart.html
@@ -1,156 +1,157 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<!DOCTYPE html><html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>عربة التسوق</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>تأكيد الطلب - Luminé</title>
   <style>
     body {
       font-family: 'Tahoma', sans-serif;
       margin: 0;
-      padding: 0;
-      background-color: #f5f5f5;
-    }
-
-    header {
-      background-color: #111;
-      color: white;
       padding: 20px;
+      background-color: #f7f7f7;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      color: #111;
+    }
+    .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      background-color: #fff;
+      padding: 10px 20px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
     }
-
-    header h1 {
-      margin: 0;
+    .header .logo {
       font-size: 24px;
+      font-weight: bold;
     }
-
-    .cart-container {
-      padding: 20px;
-    }
-
-    .cart-item {
-      background-color: white;
-      border-radius: 10px;
-      padding: 15px;
-      margin-bottom: 15px;
+    .header .lang {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      gap: 10px;
     }
-
-    .cart-item img {
-      height: 80px;
+    form {
+      max-width: 600px;
+      margin: auto;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    label {
+      display: block;
+      margin: 10px 0 5px;
+    }
+    input, select, button {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
       border-radius: 6px;
-      margin-left: 10px;
-    }
-
-    .cart-item p {
-      margin: 0;
       font-size: 16px;
     }
-
-    .remove-btn {
-      background-color: #e53935;
+    button {
+      background-color: #28a745;
       color: white;
-      border: none;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
-      font-size: 18px;
+      font-weight: bold;
       cursor: pointer;
     }
-
-    .total {
-      background-color: #fff;
-      padding: 15px;
-      font-size: 18px;
-      font-weight: bold;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      margin-top: 20px;
-      text-align: center;
+    button:hover {
+      background-color: #218838;
     }
-
-    .back-home {
+    .footer {
+      text-align: center;
       margin-top: 30px;
-      display: block;
-      text-align: center;
+      font-size: 14px;
     }
-
-    .back-home a {
-      background-color: #f0c14b;
-      color: #111;
-      padding: 10px 20px;
-      border-radius: 8px;
+    .footer a {
+      color: #007bff;
       text-decoration: none;
-      font-weight: bold;
     }
-
-    .back-home a:hover {
-      background-color: #ddb347;
+    .footer a:hover {
+      text-decoration: underline;
+    }
+    .total {
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 15px;
     }
   </style>
 </head>
-<body>
-
-  <header>
-    <h1>🛒 عربة التسوق</h1>
-  </header>
-
-  <div class="cart-container">
-    <div id="cartItems"></div>
-    <div class="total">الإجمالي: <span id="totalPrice">0</span> جنيه</div>
-    <div class="back-home">
-      <a href="index.html">العودة إلى الرئيسية</a>
+<body>  <div class="header">
+    <div class="logo">Luminé</div>
+    <div>💍💄ACCESSORIES & Brand</div>
+    <div class="lang">
+      <span>🇪🇬 عربي</span>
+      <span>🇺🇸 English</span>
     </div>
-  </div>
+  </div>  <div class="total">الإجمالي: <span id="totalPrice">0</span> ج.م</div>  <form id="checkoutForm">
+    <label>الاسم بالكامل</label>
+    <input type="text" name="fullname" required><label>رقم الهاتف</label>
+<input type="tel" name="phone" required>
 
-  <script>
-    function renderCart() {
-      const cart = JSON.parse(localStorage.getItem("cart") || "[]");
-      const container = document.getElementById("cartItems");
-      const totalPrice = document.getElementById("totalPrice");
+<label>العنوان</label>
+<input type="text" name="address" required>
 
-      if (cart.length === 0) {
-        container.innerHTML = "<p>لا توجد منتجات في العربة 🛍️</p>";
-        totalPrice.textContent = "0";
-        return;
+<label>موقعك الجغرافي</label>
+<button type="button" onclick="getLocation()">📍 تحديد موقعي</button>
+<input type="text" name="location" id="locationInput" readonly>
+
+<label>اختر طريقة الدفع</label>
+<select name="payment_method" required>
+  <option disabled selected>-- اختر --</option>
+  <option>💳 فيزا</option>
+  <option>🏦 انستا باي</option>
+  <option>📱 فودافون كاش</option>
+  <option>🟠 أورانج كاش</option>
+  <option>🟢 اتصالات كاش</option>
+</select>
+
+<label>💵 المبلغ المدفوع (بالجنيه)</label>
+<input type="number" name="amount" required>
+
+<label>🔢 آخر 4 أرقام من رقم المحوّل</label>
+<input type="text" name="last4digits" maxlength="4" required>
+
+<label>🧾 صورة إيصال الدفع (إجباري)</label>
+<input type="file" name="receipt" accept="image/*" required>
+
+<p><strong>💰 قم بتحويل المبلغ على رقم فودافون كاش التالي:</strong> <br> <strong>201080554138</strong></p>
+
+<button type="submit">✅ تأكيد الطلب</button>
+
+  </form>  <div class="footer">
+    خدمة العملاء: jojoshopsuppor@gmail.com <br>
+    واتساب: <a href="https://wa.me/201150877664" target="_blank">201150877664</a>
+  </div>  <script>
+    // حساب السعر من localStorage
+    const cart = JSON.parse(localStorage.getItem("cart") || "[]");
+    const total = cart.reduce((sum, item) => sum + item.price, 0);
+    document.getElementById("totalPrice").textContent = total;
+
+    // تحديد الموقع الجغرافي
+    function getLocation() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+          const lat = position.coords.latitude;
+          const lon = position.coords.longitude;
+          document.getElementById("locationInput").value = `https://www.google.com/maps?q=${lat},${lon}`;
+        }, function(error) {
+          alert("تعذر الحصول على الموقع.");
+        });
+      } else {
+        alert("المتصفح لا يدعم تحديد الموقع.");
       }
-
-      let total = 0;
-      container.innerHTML = "";
-
-      cart.forEach((item, index) => {
-        total += item.price;
-
-        const product = document.createElement("div");
-        product.className = "cart-item";
-        product.innerHTML = `
-          <div style="display: flex; align-items: center;">
-            <img src="${item.image}" alt="${item.name}">
-            <p><strong>${item.name}</strong><br>السعر: ${item.price} ج.م</p>
-          </div>
-          <button class="remove-btn" onclick="removeFromCart(${index})">×</button>
-        `;
-
-        container.appendChild(product);
-      });
-
-      totalPrice.textContent = total;
     }
 
-    function removeFromCart(index) {
-      let cart = JSON.parse(localStorage.getItem("cart") || "[]");
-      cart.splice(index, 1);
-      localStorage.setItem("cart", JSON.stringify(cart));
-      renderCart();
-    }
-
-    window.addEventListener("DOMContentLoaded", renderCart);
-  </script>
-
-</body>
+    // إرسال الطلب
+    document.getElementById("checkoutForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      alert("✅ تم إرسال الطلب بنجاح!");
+      // هنا تقدر تبعت البيانات لواتساب أو السيرفر حسب التطبيق
+    });
+  </script></body>
 </html>
