--- a/cart.html
+++ b/cart.html
@@ -1,182 +1,172 @@
-<!DOCTYPE html><html lang="ar" dir="rtl">
-<head>
+<!DOCTYPE html><html lang="ar" dir="rtl"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luminé Checkout</title>
+  <title>Luminé - عربة التسوق</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
-      font-family: 'Tahoma', sans-serif;
+      font-family: 'Cairo', sans-serif;
+      background-color: #ffe6f0;
       margin: 0;
-      padding: 0;
-      background-color: #fff0f5;
+      padding: 20px;
       color: #333;
     }header {
-  background-color: #ff69b4;
-  color: white;
-  padding: 20px;
   text-align: center;
+  margin-bottom: 30px;
 }
 
-header h1 {
-  margin: 0;
-  font-size: 28px;
-}
-
-.language-switcher {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-}
-
-.language-switcher span {
-  margin: 0 10px;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.container {
-  max-width: 600px;
-  margin: 30px auto;
-  background-color: white;
-  padding: 20px;
-  border-radius: 15px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+.lang-switch {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .form-group {
   margin-bottom: 15px;
 }
 
-label {
+.form-group label {
   display: block;
   margin-bottom: 5px;
-  font-weight: bold;
 }
 
-input, select, textarea {
+.form-group input,
+.form-group textarea,
+.form-group select {
   width: 100%;
   padding: 10px;
-  border-radius: 8px;
   border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.cart-items {
+  margin-bottom: 20px;
+}
+
+.cart-item {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.cart-item img {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-left: 10px;
+}
+
+.payment-note {
+  background: #fff0f5;
+  padding: 10px;
+  border-radius: 8px;
+  margin: 15px 0;
+  font-weight: bold;
 }
 
 button {
-  background-color: #ff69b4;
+  background-color: #e91e63;
   color: white;
-  padding: 12px 20px;
+  padding: 10px 20px;
   border: none;
-  border-radius: 10px;
-  font-size: 16px;
+  border-radius: 8px;
   cursor: pointer;
-  width: 100%;
+  font-size: 16px;
 }
 
-button:hover {
-  background-color: #ff4fa3;
-}
-
-.summary {
-  font-weight: bold;
-  font-size: 18px;
-  margin-bottom: 15px;
-  color: #e91e63;
-}
-
-.footer {
+footer {
   text-align: center;
   margin-top: 30px;
   font-size: 14px;
 }
 
-.footer a {
-  color: #ff69b4;
-  text-decoration: none;
-}
-
-.payment-note {
-  background-color: #fff3f8;
-  border-left: 4px solid #ff69b4;
-  padding: 10px;
-  margin-top: 10px;
-  font-weight: bold;
-}
-
   </style>
-</head>
-<body>  <header>
+</head><body>
+  <header>
     <h1>Luminé</h1>
-    <p>💍💄ACCESSORIES&Brand</p>
-    <div class="language-switcher">
-      <span>🇪🇬 عربي</span>
-      <span>🇺🇸 English</span>
-    </div>
-  </header>  <div class="container">
-    <div class="summary">الإجمالي: 0 ج.م</div><div class="form-group">
-  <label>الاسم بالكامل</label>
-  <input type="text" placeholder="ادخل اسمك" />
-</div>
+    <h2>💍💄ACCESSORIES & Brand</h2>
+  </header>  <div class="lang-switch">
+    🇪🆬 عربي | 🇺🇸 English
+  </div>  <div class="cart-items" id="cartItems"></div>  <h3>الإجمالي: <span id="totalPrice">0</span> ج.م</h3>  <div class="form-group">
+    <label>الاسم بالكامل</label>
+    <input type="text" placeholder="ادخل اسمك" />
+  </div>
+  <div class="form-group">
+    <label>رقم الهاتف</label>
+    <input type="tel" placeholder="ادخل رقمك" />
+  </div>
+  <div class="form-group">
+    <label>العنوان</label>
+    <textarea rows="2" placeholder="ادخل العنوان بالتفصيل"></textarea>
+  </div>
+  <div class="form-group">
+    <label>موقعك الجغرافي</label>
+    <button onclick="getLocation()">📍 تحديد موقعي</button>
+  </div>
+  <div class="form-group">
+    <label>اختر طريقة الدفع</label>
+    <select>
+      <option>-- اختر --</option>
+      <option>💳 فيزا</option>
+      <option>🏦 انستا باي</option>
+      <option>📱 فودافون كاش</option>
+      <option>🔘 أورانج كاش</option>
+      <option>🔷 اتصالات كاش</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label>💵 المبلغ المدفوع (بالجنيه)</label>
+    <input type="number" placeholder="ادخل المبلغ" />
+  </div>
+  <div class="form-group">
+    <label>🔢 آخر 4 أرقام من رقم المحوّل</label>
+    <input type="text" maxlength="4" placeholder="مثال: 1234" />
+  </div>
+  <div class="form-group">
+    <label>🧾 صورة إيصال الدفع (إجباري)</label>
+    <input type="file" accept="image/*" />
+  </div>
+  <div class="payment-note">
+    ⭐⭐ قم بتحويل المبلغ على رقم فودافون كاش التالي: <br />
+    <strong>201080554138</strong>
+  </div>
+  <button>✅ تأكيد الطلب</button>  <footer>
+    خدمة العملاء: jojoshopsuppor@gmail.com | واتساب: <a href="https://wa.me/201150877664">201150877664</a>
+  </footer>  <script>
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+    let cartContainer = document.getElementById("cartItems");
+    let total = 0;
 
-<div class="form-group">
-  <label>رقم الهاتف</label>
-  <input type="tel" placeholder="ادخل رقمك" />
-</div>
+    cart.forEach((item, index) => {
+      total += parseFloat(item.price);
+      cartContainer.innerHTML += `
+        <div class="cart-item">
+          <img src="${item.image}" alt="${item.name}" />
+          <div>
+            <h3>${item.name}</h3>
+            <p>${item.price} ج.م</p>
+            <button onclick="removeFromCart(${index})">❌ إزالة</button>
+          </div>
+        </div>
+      `;
+    });
 
-<div class="form-group">
-  <label>العنوان</label>
-  <textarea rows="2" placeholder="ادخل العنوان بالتفصيل"></textarea>
-</div>
+    document.getElementById("totalPrice").textContent = total.toFixed(2);
 
-<div class="form-group">
-  <label>موقعك الجغرافي</label>
-  <button onclick="getLocation()">📍 تحديد موقعي</button>
-</div>
-
-<div class="form-group">
-  <label>اختر طريقة الدفع</label>
-  <select>
-    <option>-- اختر --</option>
-    <option>💳 فيزا</option>
-    <option>🏦 انستا باي</option>
-    <option>📱 فودافون كاش</option>
-    <option>🔘 أورانج كاش</option>
-    <option>🔷 اتصالات كاش</option>
-  </select>
-</div>
-
-<div class="form-group">
-  <label>💵 المبلغ المدفوع (بالجنيه)</label>
-  <input type="number" placeholder="ادخل المبلغ" />
-</div>
-
-<div class="form-group">
-  <label>🔢 آخر 4 أرقام من رقم المحوّل</label>
-  <input type="text" maxlength="4" placeholder="مثال: 1234" />
-</div>
-
-<div class="form-group">
-  <label>🧾 صورة إيصال الدفع (إجباري)</label>
-  <input type="file" accept="image/*" />
-</div>
-
-<div class="payment-note">
-  ⭐⭐ قم بتحويل المبلغ على رقم فودافون كاش التالي: <br /> <strong>201080554138</strong>
-</div>
-
-<br />
-<button>✅ تأكيد الطلب</button>
-
-  </div>  <div class="footer">
-    خدمة العملاء: jojoshopsuppor@gmail.com<br />
-    واتساب: <a href="https://wa.me/201150877664">201150877664</a>
-  </div>  <script>
-    function getLocation() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-          alert(`خط العرض: ${position.coords.latitude}, خط الطول: ${position.coords.longitude}`);
-        });
-      } else {
-        alert("المتصفح لا يدعم تحديد الموقع الجغرافي.");
-      }
+    function removeFromCart(index) {
+      cart.splice(index, 1);
+      localStorage.setItem("cart", JSON.stringify(cart));
+      location.reload();
     }
-  </script></body>
-</html>
+
+    function getLocation() {
+      navigator.geolocation.getCurrentPosition(position => {
+        alert("تم تحديد موقعك: " + position.coords.latitude + ", " + position.coords.longitude);
+      }, () => {
+        alert("حدث خطأ أثناء تحديد الموقع");
+      });
+    }
+  </script></body></html>
