--- a/accessories.html
+++ b/accessories.html
@@ -21,6 +21,9 @@
       justify-content: space-between;
       align-items: center;
       border-bottom: 2px solid #e5a0b0;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
     .logo a {
@@ -30,10 +33,32 @@
       text-decoration: none;
     }
 
-    .lang-switcher select {
-      padding: 5px 10px;
-      border-radius: 5px;
-      border: 1px solid #999;
+    .right-header {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+
+    .cart-btn {
+      position: relative;
+      font-size: 20px;
+      color: #4b004f;
+      text-decoration: none;
+    }
+
+    .cart-btn i {
+      font-size: 24px;
+    }
+
+    .cart-count {
+      position: absolute;
+      top: -8px;
+      left: -8px;
+      background: red;
+      color: white;
+      border-radius: 50%;
+      padding: 2px 6px;
+      font-size: 12px;
     }
 
     nav {
@@ -116,7 +141,11 @@
 
   <header>
     <div class="logo"><a href="index.html">Luminé</a></div>
-    <div class="lang-switcher">
+    <div class="right-header">
+      <a class="cart-btn" href="cart.html">
+        <i class="fas fa-shopping-cart"></i>
+        <span class="cart-count" id="cartCount">0</span>
+      </a>
       <select onchange="switchLanguage(this.value)">
         <option value="ar">🇪🇬 عربي</option>
         <option value="en">🇺🇸 English</option>
@@ -146,17 +175,25 @@
       <h3>خاتم فضة عصري</h3>
       <button onclick="addToCart('خاتم فضة عصري')">إضافة إلى العربة</button>
     </div>
-    <!-- تقدر تضيف المزيد من المنتجات بنفس الشكل -->
   </section>
 
   <footer>
-    خدمة العملاء: <a href="mailto:jojoshopsuppor@gmail.com">jojoshopsuppor@gmail.com</a> - 
+    خدمة العملاء: <a href="mailto:jojoshopsuppor@gmail.com">jojoshopsuppor@gmail.com</a> -
     واتساب: <a href="https://wa.me/20115087664">20115087664</a>
   </footer>
 
   <script>
     function addToCart(productName) {
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      cart.push({ name: productName, quantity: 1 });
+      localStorage.setItem("cart", JSON.stringify(cart));
+      updateCartCount();
       alert(`تمت إضافة "${productName}" إلى العربة ✅`);
+    }
+
+    function updateCartCount() {
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      document.getElementById("cartCount").innerText = cart.length;
     }
 
     function switchLanguage(lang) {
@@ -172,6 +209,8 @@
         document.querySelectorAll("nav a")[2].textContent = "ملابس 👗🛍️";
       }
     }
+
+    updateCartCount(); // لتحديث العدد عند تحميل الصفحة
   </script>
 
 </body>
