--- a/register .html
+++ b/register .html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="ar" dir="rtl">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -39,6 +40,7 @@
       border-radius: 6px;
       border: 1px solid #999;
       font-size: 14px;
+      cursor: pointer;
     }
     .container {
       flex: 1;
@@ -51,22 +53,35 @@
       background-color: #fff;
       padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      box-shadow: 0 0 20px rgba(0,0,0,0.15);
       width: 100%;
       max-width: 400px;
     }
     .register-box h2 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
       color: #663399;
+    }
+    .input-group {
+      position: relative;
+      margin: 12px 0;
     }
     .register-box input {
       width: 100%;
-      padding: 12px;
-      margin: 10px 0;
+      padding: 12px 40px 12px 12px;
       border: 1px solid #ccc;
       border-radius: 8px;
       font-size: 16px;
+      outline: none;
+    }
+    .input-group .toggle-password {
+      position: absolute;
+      top: 50%;
+      right: 12px;
+      transform: translateY(-50%);
+      cursor: pointer;
+      font-size: 18px;
+      color: #666;
     }
     .register-box button {
       width: 100%;
@@ -77,6 +92,10 @@
       border-radius: 8px;
       font-size: 16px;
       cursor: pointer;
+      transition: 0.3s;
+    }
+    .register-box button:hover {
+      background-color: #a17ccf;
     }
     .register-box a {
       display: block;
@@ -84,6 +103,10 @@
       margin-top: 15px;
       color: #663399;
       text-decoration: none;
+      transition: 0.3s;
+    }
+    .register-box a:hover {
+      text-decoration: underline;
     }
     .footer {
       text-align: center;
@@ -110,24 +133,43 @@
         <option value="en">🇺🇸 English</option>
       </select>
     </div>
-  </header>  <div class="container">
+  </header>
+
+  <div class="container">
     <div class="register-box">
       <h2 id="registerTitle">إنشاء حساب جديد</h2>
-      <input type="email" id="email" placeholder="البريد الإلكتروني">
-      <input type="password" id="password" placeholder="كلمة المرور">
+
+      <div class="input-group">
+        <input type="email" id="email" placeholder="البريد الإلكتروني">
+      </div>
+
+      <div class="input-group">
+        <input type="password" id="password" placeholder="كلمة المرور">
+        <span class="toggle-password" onclick="togglePassword('password')">&#128065;</span>
+      </div>
+
+      <div class="input-group">
+        <input type="password" id="confirmPassword" placeholder="تأكيد كلمة المرور">
+        <span class="toggle-password" onclick="togglePassword('confirmPassword')">&#128065;</span>
+      </div>
+
       <button onclick="registerUser()" id="registerBtn">إنشاء الحساب</button>
       <a href="login.html" id="backToLogin">العودة لتسجيل الدخول</a>
     </div>
-  </div>  <div class="footer" id="customerService">
+  </div>
+
+  <div class="footer" id="customerService">
     خدمة العملاء:<br>
     <a href="mailto:jojoshopsuppor@gmail.com">jojoshopsuppor@gmail.com</a><br>
-    واتساب: <a href="https://wa.me/20115087664">20115087664</a>
-  </div>  <script>
+    واتساب: <a href="https://wa.me/201150877664">201150877664</a>
+  </div>
+
+  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyCmLlBbnKNNCA53x3SeLnCI7e3A89CxHao",
       authDomain: "jojo-shop-4d843.firebaseapp.com",
       projectId: "jojo-shop-4d843",
-      storageBucket: "jojo-shop-4d843.firebasestorage.app",
+      storageBucket: "jojo-shop-4d843.appspot.com",
       messagingSenderId: "763306332375",
       appId: "1:763306332375:web:732db30b0234d0906a2092",
       measurementId: "G-E73QP19185"
@@ -138,8 +180,24 @@
     const from = params.get('from');
 
     function registerUser() {
-      const email = document.getElementById("email").value;
+      const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value;
+      const confirmPassword = document.getElementById("confirmPassword").value;
+
+      if (!email || !password || !confirmPassword) {
+        alert("يرجى ملء جميع الحقول.");
+        return;
+      }
+
+      if (password.length < 6) {
+        alert("كلمة المرور يجب أن تكون 6 حروف على الأقل.");
+        return;
+      }
+
+      if (password !== confirmPassword) {
+        alert("كلمة المرور وتأكيدها غير متطابقين.");
+        return;
+      }
 
       firebase.auth().createUserWithEmailAndPassword(email, password)
         .then((userCredential) => {
@@ -155,6 +213,15 @@
         });
     }
 
+    function togglePassword(id) {
+      const input = document.getElementById(id);
+      if (input.type === "password") {
+        input.type = "text";
+      } else {
+        input.type = "password";
+      }
+    }
+
     function switchLanguage(lang) {
       const body = document.body;
       if (lang === "en") {
@@ -164,12 +231,13 @@
         document.getElementById("registerTitle").textContent = "Create New Account";
         document.getElementById("email").placeholder = "Email";
         document.getElementById("password").placeholder = "Password";
+        document.getElementById("confirmPassword").placeholder = "Confirm Password";
         document.getElementById("registerBtn").textContent = "Register";
         document.getElementById("backToLogin").textContent = "Back to Login";
         document.getElementById("customerService").innerHTML = `
           Customer Support:<br>
           <a href="mailto:jojoshopsuppor@gmail.com">jojoshopsuppor@gmail.com</a><br>
-          WhatsApp: <a href="https://wa.me/20115087664">20115087664</a>
+          WhatsApp: <a href="https://wa.me/201150877664">201150877664</a>
         `;
       } else {
         body.setAttribute("dir", "rtl");
@@ -178,14 +246,16 @@
         document.getElementById("registerTitle").textContent = "إنشاء حساب جديد";
         document.getElementById("email").placeholder = "البريد الإلكتروني";
         document.getElementById("password").placeholder = "كلمة المرور";
+        document.getElementById("confirmPassword").placeholder = "تأكيد كلمة المرور";
         document.getElementById("registerBtn").textContent = "إنشاء الحساب";
         document.getElementById("backToLogin").textContent = "العودة لتسجيل الدخول";
         document.getElementById("customerService").innerHTML = `
           خدمة العملاء:<br>
           <a href="mailto:jojoshopsuppor@gmail.com">jojoshopsuppor@gmail.com</a><br>
-          واتساب: <a href="https://wa.me/20115087664">20115087664</a>
+          واتساب: <a href="https://wa.me/201150877664">201150877664</a>
         `;
       }
     }
-  </script></body>
+  </script>
+</body>
 </html>
